# dataline

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
test/: test_input.py
